# lyk-hj

./: .gitignore  CMakeLists.txt  asyn_main.cpp  main.cpp
include/: ovInference.hpp
onnx_models/: 2023_2_1_hj_num_2.onnx
ov_fp32_model/: 2023_2_1_hj_num_2.mapping  2023_2_1_hj_num_2.xml
ov_models/: 2023_2_1_hj_num_2.mapping  2023_2_1_hj_num_2.xml
src/: ovInference.cpp
